<?xml version="1.0"?>
<package format="2">
  <name>pico_flexx_driver_ros2</name>
  <version>0.0.1</version>
  <description>This example shows the integration of PicoFlexx into ROS2.</description>

  <maintainer email="michael.mathew@ocado.com">Ocado</maintainer>

  <license>Royale License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz2</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>libqt5-widgets</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
